button adjustment, hide navbar on resize, some box shadow

--- a/card.scss
+++ b/card.scss
@@ -1,6 +1,7 @@
 .card {
   @include flex-around;
   align-items: center;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   &-text {
     text-align: justify;
     @media (max-width: 1125px) {
